# eprem

./: .gitignore  CMakeLists.txt  CMakePresets.json
cmake/modules/: FindConfig.cmake  FindNetCDF.cmake  _FindHelpers.cmake
src/: CMakeLists.txt  configuration.c  configuration.h  cubeShellInit.c  cubeShellStruct.c  cubeShellStruct.h  energeticParticles.c  energeticParticles.h  energeticParticlesBoundary.c  energeticParticlesBoundary.h  energeticParticlesInit.c  energeticParticlesTypes.c  energeticParticlesTypes.h  eprem.c  error.h  flow.c  flow.h  geometry.c  geometry.h  mhdIO.c  mhdIO.h  mhdInterp.c  mhdInterp.h  mpiInit.c  nearestGridNode.c  nearestGridNode.h  observerOutput.c  observerOutput.h  readMHD.c  readMHD.h  search.c  searchTypes.h  simCore.c  simCore.h  timers.h  unifiedOutput.c  unifiedOutput.h
